--- a/Concepts/M13 - DL/D1.3 ANN - Deep Neural Networks from Scratch.ipynb
+++ b/Concepts/M13 - DL/D1.3 ANN - Deep Neural Networks from Scratch.ipynb
@@ -2,6 +2,534 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Essential Libraries\n",
+    "import os\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "from numpy import ndarray\n",
+    "import pandas as pd\n",
+    "import datetime\n",
+    "import random\n",
+    "from typing import Callable, Dict, Tuple, List\n",
+    "\n",
+    "# ML\n",
+    "# from sklearn import datasets\n",
+    "# import tensorflow as tf\n",
+    "# import keras\n",
+    "\n",
+    "# Plots\n",
+    "import seaborn as sns\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "mpl.rc('axes', labelsize=14)\n",
+    "mpl.rc('xtick', labelsize=12)\n",
+    "mpl.rc('ytick', labelsize=12)\n",
+    "plt.style.use('seaborn-whitegrid')\n",
+    "\n",
+    "# Display options\n",
+    "pd.set_option('display.max_columns', None);\n",
+    "pd.options.display.max_seq_items = 8000;\n",
+    "pd.options.display.max_rows = 8000;\n",
+    "%precision 6\n",
+    "\n",
+    "# Ignore Warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(action=\"ignore\")\n",
+    "\n",
+    "# Define data and image directory\n",
+    "PROJECT_ROOT_DIR = \".\"\n",
+    "DATA_DIR = os.path.join(PROJECT_ROOT_DIR, \"data\")\n",
+    "IMAGE_DIR = os.path.join(PROJECT_ROOT_DIR, \"img\")\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "for d in [DATA_DIR, IMAGE_DIR]:\n",
+    "    if not os.path.exists(d):\n",
+    "        os.mkdir(d)\n",
+    "\n",
+    "# Define a function to save images\n",
+    "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
+    "    path = os.path.join(IMAGE_DIR, fig_id + \".\" + fig_extension)\n",
+    "    print(\"Saving figure\", fig_id)\n",
+    "    if tight_layout:\n",
+    "        plt.tight_layout()\n",
+    "    plt.savefig(path, format=fig_extension, dpi=resolution)\n",
+    "    \n",
+    "from pprint import pprint\n",
+    "\n",
+    "# This is a little recursive helper function converts all nested ndarrays to python list of lists so that pretty printer knows what to do.\n",
+    "\n",
+    "def arrayToList(arr):\n",
+    "    if type(arr) == type(np.array):\n",
+    "        #If the passed type is an ndarray then convert it to a list and\n",
+    "        #recursively convert all nested types\n",
+    "        return arrayToList(arr.tolist())\n",
+    "    else:\n",
+    "        #if item isn't an ndarray leave it as is.\n",
+    "        return arr\n",
+    "    \n",
+    "# Suppress exponential notation, define an appropriate float formatter\n",
+    "# Specify stdout line width and let pretty print do the work\n",
+    "np.set_printoptions(suppress=True, formatter={'float_kind':'{:12.4f}'.format}, linewidth=120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Operation(object):\n",
+    "    '''\n",
+    "    Base class for an \"operation\" in a neural network.\n",
+    "    '''\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def forward(self, input_: ndarray):\n",
+    "        '''\n",
+    "        Stores input in the self._input instance variable\n",
+    "        Calls the self._output() function.\n",
+    "        '''\n",
+    "        self.input_ = input_\n",
+    "\n",
+    "        self.output = self._output()\n",
+    "\n",
+    "        return self.output\n",
+    "\n",
+    "\n",
+    "    def backward(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Calls the self._input_grad() function.\n",
+    "        Checks that the appropriate shapes match.\n",
+    "        '''\n",
+    "        assert_same_shape(self.output, output_grad)\n",
+    "\n",
+    "        self.input_grad = self._input_grad(output_grad)\n",
+    "\n",
+    "        assert_same_shape(self.input_, self.input_grad)\n",
+    "        return self.input_grad\n",
+    "\n",
+    "\n",
+    "    def _output(self) -> ndarray:\n",
+    "        '''\n",
+    "        The _output method must be defined for each Operation\n",
+    "        '''\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "\n",
+    "    def _input_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        The _input_grad method must be defined for each Operation\n",
+    "        '''\n",
+    "        raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ParamOperation(Operation):\n",
+    "    '''\n",
+    "    An Operation with parameters.\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, param: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        The ParamOperation method\n",
+    "        '''\n",
+    "        super().__init__()\n",
+    "        self.param = param\n",
+    "\n",
+    "    def backward(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Calls self._input_grad and self._param_grad.\n",
+    "        Checks appropriate shapes.\n",
+    "        '''\n",
+    "\n",
+    "        assert_same_shape(self.output, output_grad)\n",
+    "\n",
+    "        self.input_grad = self._input_grad(output_grad)\n",
+    "        self.param_grad = self._param_grad(output_grad)\n",
+    "\n",
+    "        assert_same_shape(self.input_, self.input_grad)\n",
+    "        assert_same_shape(self.param, self.param_grad)\n",
+    "\n",
+    "        return self.input_grad\n",
+    "\n",
+    "    def _param_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Every subclass of ParamOperation must implement _param_grad.\n",
+    "        '''\n",
+    "        raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Specific `Operation`s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WeightMultiply(ParamOperation):\n",
+    "    '''\n",
+    "    Weight multiplication operation for a neural network.\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, W: ndarray):\n",
+    "        '''\n",
+    "        Initialize Operation with self.param = W.\n",
+    "        '''\n",
+    "        super().__init__(W)\n",
+    "\n",
+    "    def _output(self) -> ndarray:\n",
+    "        '''\n",
+    "        Compute output.\n",
+    "        '''\n",
+    "        return np.dot(self.input_, self.param)\n",
+    "\n",
+    "    def _input_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Compute input gradient.\n",
+    "        '''\n",
+    "        return np.dot(output_grad, np.transpose(self.param, (1, 0)))\n",
+    "\n",
+    "    def _param_grad(self, output_grad: ndarray)  -> ndarray:\n",
+    "        '''\n",
+    "        Compute parameter gradient.\n",
+    "        '''        \n",
+    "        return np.dot(np.transpose(self.input_, (1, 0)), output_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BiasAdd(ParamOperation):\n",
+    "    '''\n",
+    "    Compute bias addition.\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 B: ndarray):\n",
+    "        '''\n",
+    "        Initialize Operation with self.param = B.\n",
+    "        Check appropriate shape.\n",
+    "        '''\n",
+    "        assert B.shape[0] == 1\n",
+    "        \n",
+    "        super().__init__(B)\n",
+    "\n",
+    "    def _output(self) -> ndarray:\n",
+    "        '''\n",
+    "        Compute output.\n",
+    "        '''\n",
+    "        return self.input_ + self.param\n",
+    "\n",
+    "    def _input_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Compute input gradient.\n",
+    "        '''\n",
+    "        return np.ones_like(self.input_) * output_grad\n",
+    "\n",
+    "    def _param_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Compute parameter gradient.\n",
+    "        '''\n",
+    "        param_grad = np.ones_like(self.param) * output_grad\n",
+    "        return np.sum(param_grad, axis=0).reshape(1, param_grad.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sigmoid(Operation):\n",
+    "    '''\n",
+    "    Sigmoid activation function.\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        '''Pass'''\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def _output(self) -> ndarray:\n",
+    "        '''\n",
+    "        Compute output.\n",
+    "        '''\n",
+    "        return 1.0/(1.0+np.exp(-1.0 * self.input_))\n",
+    "\n",
+    "    def _input_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Compute input gradient.\n",
+    "        '''\n",
+    "        sigmoid_backward = self.output * (1.0 - self.output)\n",
+    "        input_grad = sigmoid_backward * output_grad\n",
+    "        return input_grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Linear(Operation):\n",
+    "    '''\n",
+    "    \"Identity\" activation function\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        '''Pass'''        \n",
+    "        super().__init__()\n",
+    "\n",
+    "    def _output(self) -> ndarray:\n",
+    "        '''Pass through'''\n",
+    "        return self.input_\n",
+    "\n",
+    "    def _input_grad(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''Pass through'''\n",
+    "        return output_grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `Layer` and `Dense`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Layer(object):\n",
+    "    '''\n",
+    "    A \"layer\" of neurons in a neural network.\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 neurons: int):\n",
+    "        '''\n",
+    "        The number of \"neurons\" roughly corresponds to the \"breadth\" of the layer\n",
+    "        '''\n",
+    "        self.neurons = neurons\n",
+    "        self.first = True\n",
+    "        self.params: List[ndarray] = []\n",
+    "        self.param_grads: List[ndarray] = []\n",
+    "        self.operations: List[Operation] = []\n",
+    "\n",
+    "    def _setup_layer(self, num_in: int) -> None:\n",
+    "        '''\n",
+    "        The _setup_layer function must be implemented for each layer\n",
+    "        '''\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    def forward(self, input_: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Passes input forward through a series of operations\n",
+    "        ''' \n",
+    "        if self.first:\n",
+    "            self._setup_layer(input_)\n",
+    "            self.first = False\n",
+    "\n",
+    "        self.input_ = input_\n",
+    "\n",
+    "        for operation in self.operations:\n",
+    "\n",
+    "            input_ = operation.forward(input_)\n",
+    "\n",
+    "        self.output = input_\n",
+    "\n",
+    "        return self.output\n",
+    "\n",
+    "    def backward(self, output_grad: ndarray) -> ndarray:\n",
+    "        '''\n",
+    "        Passes output_grad backward through a series of operations\n",
+    "        Checks appropriate shapes\n",
+    "        '''\n",
+    "\n",
+    "        assert_same_shape(self.output, output_grad)\n",
+    "\n",
+    "        for operation in reversed(self.operations):\n",
+    "            output_grad = operation.backward(output_grad)\n",
+    "\n",
+    "        input_grad = output_grad\n",
+    "        \n",
+    "        self._param_grads()\n",
+    "\n",
+    "        return input_grad\n",
+    "\n",
+    "    def _param_grads(self) -> ndarray:\n",
+    "        '''\n",
+    "        Extracts the _param_grads from a layer's operations\n",
+    "        '''\n",
+    "\n",
+    "        self.param_grads = []\n",
+    "        for operation in self.operations:\n",
+    "            if issubclass(operation.__class__, ParamOperation):\n",
+    "                self.param_grads.append(operation.param_grad)\n",
+    "\n",
+    "    def _params(self) -> ndarray:\n",
+    "        '''\n",
+    "        Extracts the _params from a layer's operations\n",
+    "        '''\n",
+    "\n",
+    "        self.params = []\n",
+    "        for operation in self.operations:\n",
+    "            if issubclass(operation.__class__, ParamOperation):\n",
+    "                self.params.append(operation.param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dense(Layer):\n",
+    "    '''\n",
+    "    A fully connected layer which inherits from \"Layer\"\n",
+    "    '''\n",
+    "    def __init__(self,\n",
+    "                 neurons: int,\n",
+    "                 activation: Operation = Sigmoid()):\n",
+    "        '''\n",
+    "        Requires an activation function upon initialization\n",
+    "        '''\n",
+    "        super().__init__(neurons)\n",
+    "        self.activation = activation\n",
+    "\n",
+    "    def _setup_layer(self, input_: ndarray) -> None:\n",
+    "        '''\n",
+    "        Defines the operations of a fully connected layer.\n",
+    "        '''\n",
+    "        if self.seed:\n",
+    "            np.random.seed(self.seed)\n",
+    "\n",
+    "        self.params = []\n",
+    "\n",
+    "        # weights\n",
+    "        self.params.append(np.random.randn(input_.shape[1], self.neurons))\n",
+    "\n",
+    "        # bias\n",
+    "        self.params.append(np.random.randn(1, self.neurons))\n",
+    "\n",
+    "        self.operations = [WeightMultiply(self.params[0]),\n",
+    "                           BiasAdd(self.params[1]),\n",
+    "                           self.activation]\n",
+    "\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `Loss` and `MeanSquaredError`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Loss(object):\n",
+    "    '''\n",
+    "    The \"loss\" of a neural network\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        '''Pass'''\n",
+    "        pass\n",
+    "\n",
+    "    def forward(self, prediction: ndarray, target: ndarray) -> float:\n",
+    "        '''\n",
+    "        Computes the actual loss value\n",
+    "        '''\n",
+    "        assert_same_shape(prediction, target)\n",
+    "\n",
+    "        self.prediction = prediction\n",
+    "        self.target = target\n",
+    "\n",
+    "        loss_value = self._output()\n",
+    "\n",
+    "        return loss_value\n",
+    "\n",
+    "    def backward(self) -> ndarray:\n",
+    "        '''\n",
+    "        Computes gradient of the loss value with respect to the input to the loss function\n",
+    "        '''\n",
+    "        self.input_grad = self._input_grad()\n",
+    "\n",
+    "        assert_same_shape(self.prediction, self.input_grad)\n",
+    "\n",
+    "        return self.input_grad\n",
+    "\n",
+    "    def _output(self) -> float:\n",
+    "        '''\n",
+    "        Every subclass of \"Loss\" must implement the _output function.\n",
+    "        '''\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    def _input_grad(self) -> ndarray:\n",
+    "        '''\n",
+    "        Every subclass of \"Loss\" must implement the _input_grad function.\n",
+    "        '''\n",
+    "        raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MeanSquaredError(Loss):\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        '''Pass'''\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def _output(self) -> float:\n",
+    "        '''\n",
+    "        Computes the per-observation squared error loss\n",
+    "        '''\n",
+    "        loss = (\n",
+    "            np.sum(np.power(self.prediction - self.target, 2)) / \n",
+    "            self.prediction.shape[0]\n",
+    "        )\n",
+    "\n",
+    "        return loss\n",
+    "\n",
+    "    def _input_grad(self) -> ndarray:\n",
+    "        '''\n",
+    "        Computes the loss gradient with respect to the input for MSE loss\n",
+    "        '''        \n",
+    "\n",
+    "        return 2.0 * (self.prediction - self.target) / self.prediction.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
