--- a/Concepts/C01 - Python/M1 - Python Fundamentals.ipynb
+++ b/Concepts/C01 - Python/M1 - Python Fundamentals.ipynb
@@ -13,10 +13,573 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46 Students\n",
+      "46 Teachers\n",
+      "46 Clerks\n",
+      "13 Students\n",
+      "13 Teachers\n",
+      "13 Clerks\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = [46, 13]\n",
+    "people = [\"Students\", \"Teachers\", \"Clerks\"]\n",
+    "\n",
+    "for x in total:\n",
+    "    for y in people:\n",
+    "        print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'9'==9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bubble\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'bubble'  \n",
+    "for i in range(len(a)):  \n",
+    "    a[i].upper()  \n",
+    "print (a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"string\"\n",
+    "print(a.replace(\"rg\", \"12\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8, {1, 2, 3}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {\n",
+    "    1,\n",
+    "    2,\n",
+    "    3\n",
+    "}\n",
+    "b = [6, 7, 8]\n",
+    "b.append(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[60, 72, 84, 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [12, 24, 36, 48, 60, 72, 84, 96, 108]\n",
+    "print(a[4: -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 32, 12, 1, 2, 7, 55, 42, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = [21, 32, 12, 1, 2, 7, 55]\n",
+    "alpha.extend([42, 4])\n",
+    "print(alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lead\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales = {\n",
+    "    'abc': 65,\n",
+    "    'xyz': 105\n",
+    "}\n",
+    "if sales['abc'] > 65:\n",
+    "    print(\"Full Incentive\")\n",
+    "elif sales['xyz'] > 65:\n",
+    "    print(\"Lead\")\n",
+    "elif sales['jkl'] > 65:\n",
+    "    print(\"Top Performer\")\n",
+    "else :\n",
+    "    print(\"No results\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "y = 0\n",
+    "x = x^y\n",
+    "y = x^y\n",
+    "x = x^y\n",
+    "print (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'w', 'o', 'r', 'l', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['hello']\n",
+    "a += 'world'\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(-3) + bool(6.533) + bool(0.3) - bool(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello-World\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"Hello\", \"World\"]\n",
+    "print(\"-\".join(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, [4, 5]] [1, 6, 3, [4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, [4, 5]]\n",
+    "l1 = l.copy()\n",
+    "l1[1] = 6\n",
+    "print(l, l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a'], ['b'], ['c'], ['d']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"abcd\"\n",
+    "print(list(map(list, a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 20\n",
+    "b = 40\n",
+    "for num in range(a, b + 1):\n",
+    "    if num > 1:\n",
+    "        for i in range(2, num):\n",
+    "            if (num % i) == 0:\n",
+    "                break\n",
+    "        else :\n",
+    "            print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [947, 265]\n",
+    "print(len(''.join(list(map(str, x)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terminator\n"
+     ]
+    }
+   ],
+   "source": [
+    "class test:\n",
+    "    def __init__(self):\n",
+    "        self.variable = 'Terminator'\n",
+    "        self.Change(self.variable)\n",
+    "    def Change(self,var):\n",
+    "        var = 'Expandanbles'\n",
+    "obj = test()\n",
+    "print(obj.variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self):\n",
+    "        self.__i = 1\n",
+    "        self.j = 2\n",
+    "    def display(self):\n",
+    "        print(self.__i, self.j)\n",
+    "class B(A):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.__i = 12\n",
+    "        self.j = 28\n",
+    "c = B()\n",
+    "c.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class foo:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "    def __lt__(self, other):\n",
+    "        if self.x < other.x:\n",
+    "            return True\n",
+    "        else :\n",
+    "            return False\n",
+    "a = foo(2)\n",
+    "b = foo(3)\n",
+    "print(a<b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63\n",
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A():\n",
+    "    def __init__(self, bound = 63):\n",
+    "        self.bound = bound\n",
+    "obj1 = A()\n",
+    "obj2 = A(42)\n",
+    "print(obj1.bound)\n",
+    "print(obj2.bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-27-fb6547faa317>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-fb6547faa317>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    return True\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "class foo:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n",
+    "    \n",
+    "    def __lt__(self, other):\n",
+    "        if self.x < other.x:\n",
+    "        return True\n",
+    "        else:\n",
+    "        return False\n",
+    "    \n",
+    "a = foo(2)\n",
+    "b = foo(3)\n",
+    "print(a < b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, id):\n",
+    "        self.name = name\n",
+    "        self.id = id\n",
+    "        print(self.id)\n",
+    "obj = Employee(\"Robby\", 1)\n",
+    "obj.id = 2\n",
+    "print(obj.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albie says don't eat apples\n",
+      "Albie is a doctor. He is 27 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Doctor:\n",
+    "    species = \"Homo Sapiens\"\n",
+    "    def __init__(self, name, gender, age):\n",
+    "        self.name = name\n",
+    "        self.gender = gender\n",
+    "        self.age = age\n",
+    "    def description(self):\n",
+    "        if self.gender == \"M\":\n",
+    "            pronoun = \"He\"\n",
+    "        elif self.gender == \"F\":\n",
+    "            pronoun = \"She\"\n",
+    "        else :\n",
+    "            pronoun = \"He/She\" \n",
+    "        return f\"{self.name} is a doctor. {pronoun} is {self.age} years old\"\n",
+    "    def speak(self, sound):\n",
+    "        return f\"{self.name} says {sound}\"\n",
+    "DrAlbie = Doctor(\"Albie\", \"M\", 27)\n",
+    "print(DrAlbie.speak(\"don't eat apples\"))\n",
+    "print(DrAlbie.description())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'change' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-d5943a7afd59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mchange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-31-d5943a7afd59>\u001b[0m in \u001b[0;36mchange\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0msetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'change' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class change:\n",
+    "    def __init__(self, x, y, z):\n",
+    "        self.a = x + y + z\n",
+    "    x = change(1, 3, 5)\n",
+    "    y = getattr(x, 'a')\n",
+    "    setattr(x, 'a', y + 1)\n",
+    "print(x.a)"
+   ]
   }
  ],
  "metadata": {
@@ -35,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
